# prod-incident-ai

./: .gitignore  README.md  pyproject.toml
configs/: config.eval.yaml  config.yaml
data/eval/: incident_eval_cases.json
data/mock/: github_recent_prs.json
data/mock/pr_code_changes/: pr_1942.patch  pr_1951.patch  pr_1960.patch  pr_1964.patch
data/scenarios/: default_scenarios.json
scripts/: analyze_adx.py  eval_incident_summary.py  generate_logs.py  run_pipeline.py  summarize_incident.py
src/prod_incident_ai/: __init__.py  analyze_adx.py  config_loader.py  eval_incident_summary.py  generate_logs.py  run_pipeline.py  summarize_incident.py  taxonomy.py
